2008-07-14  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/app.pl: added support for color arrays.

2008-07-14  Sven Neumann  <sven@gimp.org>

	* app/pdb/gimp-pdb-compat.c (gimp_pdb_compat_arg_type_from_gtype):
	added mapping from GIMP_TYPE_COLOR_ARRAY to GIMP_PDB_COLORARRAY.

2008-07-14  Sven Neumann  <sven@gimp.org>

	Add new PDB data type PDB_COLORARRAY for using arrays of GimpRGB
	colors as argument or return value.

	* libgimpbase/gimpbaseenums.[ch] (enum GimpPDBArgType): replaced
	the unused GIMP_PDB_BOUNDARY with GIMP_PDB_COLORARRAY.

	* libgimpbase/gimpprotocol.h: increased GIMP_PROTOCOL_VERSION.
	(struct _GPParam): added d_colorarray entry to the union.

	* libgimpbase/gimpprotocol.c
	* libgimp/gimp.[ch]
	* app/pdb/gimp-pdb-compat.c
	* app/plug-in/plug-in-params.c
	* app/plug-in/gimpplugin-message.c
	* tools/pdbgen/pdb.pl: deal with the new data type.

	* tools/pdbgen/enums.pl: regenerated.

	* plug-ins/pygimp/pygimp-pdb.c
	* plug-ins/script-fu/scheme-wrapper.c: handle the new data type.

2008-07-14  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpcontrollerkeyboard.c: changed cursor key event
	prefix from "key-" to "cursor-".

	* etc/controllerrc: changed accordingly. Also removed default
	bindings for cursor keys without modifiers as many tools use the
	cursor keys already.

2008-07-14  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-scale.c
	(gimp_display_shell_scale_setup): added some line breaks to
	improve readability.

2008-07-13  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-scale.[ch]
	(gimp_display_shell_center_image): Allow to choose what axes to
	center on.

	(gimp_display_shell_scale_fill)
	(gimp_display_shell_scale_fit_in): Explicitly center on both axes.

	* app/display/gimpdisplayshell.c (gimp_display_shell_fill): Center
	the image in the previously empty display shell. Rather hackish,
	but seems to work fine.

2008-07-13  Sven Neumann  <sven@gimp.org>

	* app/widgets/Makefile.am